package app.controller;

import app.AgeGroup.AgeGroup;
import app.domain.model.Company;
import app.domain.model.ScheduleVaccine;

public class ScheduleVaccineController {


    private Company company;

        public ScheduleVaccineController(Company company) {
            this.company = company;
        }

        public ScheduleVaccineController(){ this.company = new Company(); }
/*
    public boolean createScheduleVaccine{
    }


    public boolean saveScheduleVaccine{
    }

 */

}
