package app.domain.model;

public class SMSNotification {


}
